# stm32f4xx-hal

./: CHANGELOG.md  Cargo.toml  README.md
src/: gpio.rs  gpio_v1.rs  i2c.rs  i2c_v2.rs  lib.rs  qei.rs  rcc.rs  serial.rs  signature.rs  spi.rs  timer.rs  watchdog.rs
tools/: check.py
