[package]
edition = "2018"

authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32F4 series microcontrollers"
documentation = "https://docs.rs/stm32f4xx-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32f4xx",
    "hal",
]
license = "0BSD"
name = "stm32f4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f4xx-hal"
version = "0.5.0"

[package.metadata.docs.rs]
features = ["stm32f429", "rt"]

[dependencies]
cortex-m = ">=0.5.8,<0.7"
cortex-m-rt = "0.6.8"
nb = "0.1.2"

[dependencies.stm32f0]
version = "0.7.0"
optional = true

[dependencies.stm32f1]
version = "0.7.0"
optional = true

[dependencies.stm32f2]
version = "0.7.0"
optional = true

[dependencies.stm32f3]
version = "0.7.0"
optional = true

[dependencies.stm32f4]
version = "0.7.0"
optional = true

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[features]
device-selected = []
stm32f0-rt = ["stm32f0/rt"]
stm32f1-rt = ["stm32f1/rt"]
stm32f2-rt = ["stm32f2/rt"]
stm32f3-rt = ["stm32f3/rt"]
stm32f4-rt = ["stm32f4/rt"]
stm32f0x0 = ["stm32f0/stm32f0x0", "device-selected"]
stm32f0x1 = ["stm32f0/stm32f0x1", "device-selected"]
stm32f0x2 = ["stm32f0/stm32f0x2", "device-selected"]
stm32f0x8 = ["stm32f0/stm32f0x8", "device-selected"]
stm32f100 = ["stm32f1/stm32f100", "device-selected"]
stm32f101 = ["stm32f1/stm32f101", "device-selected"]
stm32f102 = ["stm32f1/stm32f102", "device-selected"]
stm32f103 = ["stm32f1/stm32f103", "device-selected"]
stm32f105 = ["stm32f1/stm32f107", "device-selected"]
stm32f107 = ["stm32f1/stm32f107", "device-selected"]
stm32f205 = ["stm32f2/stm32f215", "device-selected"]
stm32f207 = ["stm32f2/stm32f217", "device-selected"]
stm32f215 = ["stm32f2/stm32f215", "device-selected"]
stm32f217 = ["stm32f2/stm32f217", "device-selected"]
stm32f301 = ["stm32f3/stm32f301", "device-selected"]
stm32f302 = ["stm32f3/stm32f302", "device-selected"]
stm32f303 = ["stm32f3/stm32f303", "device-selected"]
stm32f318 = ["stm32f3/stm32f301", "device-selected"]
stm32f328 = ["stm32f3/stm32f3x8", "device-selected"]
stm32f334 = ["stm32f3/stm32f3x4", "device-selected"]
stm32f358 = ["stm32f3/stm32f3x8", "device-selected"]
stm32f373 = ["stm32f3/stm32f373", "device-selected"]
stm32f378 = ["stm32f3/stm32f373", "device-selected"]
stm32f398 = ["stm32f3/stm32f3x8", "device-selected"]
stm32f401 = ["stm32f4/stm32f401", "device-selected"]
stm32f405 = ["stm32f4/stm32f405", "device-selected"]
stm32f407 = ["stm32f4/stm32f407", "device-selected"]
stm32f410 = ["stm32f4/stm32f410", "device-selected"]
stm32f411 = ["stm32f4/stm32f411", "device-selected"]
stm32f412 = ["stm32f4/stm32f412", "device-selected"]
stm32f413 = ["stm32f4/stm32f413", "device-selected"]
stm32f415 = ["stm32f4/stm32f405", "device-selected"]
stm32f417 = ["stm32f4/stm32f407", "device-selected"]
stm32f423 = ["stm32f4/stm32f413", "device-selected"]
stm32f427 = ["stm32f4/stm32f427", "device-selected"]
stm32f429 = ["stm32f4/stm32f429", "device-selected"]
stm32f437 = ["stm32f4/stm32f427", "device-selected"]
stm32f439 = ["stm32f4/stm32f429", "device-selected"]
stm32f446 = ["stm32f4/stm32f446", "device-selected"]
stm32f469 = ["stm32f4/stm32f469", "device-selected"]
stm32f479 = ["stm32f4/stm32f469", "device-selected"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
